--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/material": "^7.3.5",
     "@mui/x-data-grid": "^8.17.0",
     "formik": "^2.4.6",
+    "mui-phone-input": "^0.1.6",
     "next": "16.0.1",
+    "notistack": "^3.0.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "yup": "^1.7.1"
